# cryo

./: .gitignore  Cargo.toml
.github/workflows/: build_and_test.yml
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  lib.rs  main.rs  run.rs
crates/cli/src/parse/: args.rs  blocks.rs  file_output.rs  parse_utils.rs  partitions.rs  schemas.rs  source.rs  timestamps.rs
crates/freeze/: Cargo.toml  build.rs
crates/freeze/src/: freeze.rs  lib.rs
crates/freeze/src/datasets/: address_appearances.rs  balance_diffs.rs  balance_reads.rs  balances.rs  blocks.rs  code_diffs.rs  code_reads.rs  codes.rs  contracts.rs  erc20_approvals.rs  erc20_balances.rs  erc20_metadata.rs  erc20_supplies.rs  erc20_transfers.rs  erc721_metadata.rs  erc721_transfers.rs  eth_calls.rs  four_byte_counts.rs  geth_balance_diffs.rs  geth_calls.rs  geth_code_diffs.rs  geth_nonce_diffs.rs  geth_opcodes.rs  geth_storage_diffs.rs  javascript_traces.rs  logs.rs  native_transfers.rs  nonce_diffs.rs  nonce_reads.rs  nonces.rs  slots.rs  storage_diffs.rs  storage_reads.rs  trace_calls.rs  traces.rs  transactions.rs  vm_traces.rs
crates/freeze/src/multi_datasets/: geth_state_diffs.rs  state_diffs.rs  state_reads.rs
crates/freeze/src/types/: columns.rs  conversions.rs  errors.rs  files.rs  mod.rs  partitions.rs  schemas.rs  sources.rs  summaries.rs
crates/freeze/src/types/chunks/: binary_chunk.rs  chunk_ops.rs  mod.rs  number_chunk.rs
crates/freeze/src/types/dataframes/: columns.rs  creation.rs  dyn_values.rs  export.rs  mod.rs  read.rs  sort.rs  u256s.rs
crates/freeze/src/types/datatypes/: datatype_macros.rs  multi.rs  scalar.rs
crates/freeze/src/types/decoders/: log_decoder.rs
crates/freeze/tests/: from_dataframes.rs
crates/python/: Cargo.toml  README.md  pyproject.toml
crates/python/anvil_tests/: anvil.py  anvil_client.py  example.py
crates/python/rust/: collect_adapter.rs  freeze_adapter.rs  lib.rs
crates/to_df/: Cargo.toml
crates/to_df/src/: lib.rs
