
[workspace]
members = ["crates/cli", "crates/freeze", "crates/to_df", "crates/python"]

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021 but not virtual workspaces.
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.package]
version = "0.3.2"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/paradigmxyz/cryo"
repository = "https://github.com/paradigmxyz/cryo"
exclude = [".github/"]

[workspace.dependencies]
cryo_cli = { version = "0.3.2", path = "./crates/cli" }
cryo_freeze = { version = "0.3.2", path = "./crates/freeze", default-features = false }
cryo_to_df = { version = "0.3.2", path = "./crates/to_df" }

alloy = { version = "1.0.9", default-features = false, features = [
    "std",
    "full",
    "transport-ipc-mock",
] }
alloy-transport-http = { version = "1.0.9", default-features = false, features = ["jwt-auth"] }
anstyle = "1.0.4"
async-trait = "0.1.74"
chrono = { version = "0.4.31", features = ["serde"] }
clap_cryo = { version = "4.3.21-cryo", features = [
    "derive",
    "color",
    "unstable-styles",
] }
colored = "3.0"
color-print = "0.3.5"
eyre = "0.6.8"
futures = "0.3.29"
governor = "0.10.0"
hex = "0.4.3"
heck = "0.5.0"
indexmap = "2.1.0"
indicatif = "0.18.0"
lazy_static = "1.4.0"
mesc = "0.3.0"
polars = { version = "0.50.0", features = [
    "parquet",
    "string_encoding",
    "polars-lazy",
    "lazy",
    "binary_encoding",
    "json",
    "dtype-struct",
] }
pyo3 = { version = "0.25.0" }
pyo3-build-config = "0.25.0"
pyo3-async-runtimes = { version = "0.25.0", features = ["tokio-runtime"] }
pyo3-polars = "0.23.0"
rand = "0.9.2"
regex = "1.10.2"
serde = { version = "1.0.191", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "2.0"
thousands = "0.2.0"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread", "sync"] }

[profile.dev]
incremental = true
debug = 1
codegen-units = 32
